--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -10,8 +10,8 @@ html(lang="en")
 		link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
 		link(rel="stylesheet",href="style.css")
 	body
-	hr
-	h1 pasos
+		hr
+		h1 pasos
 		.steps
 			.container
 				.row
@@ -35,22 +35,63 @@ html(lang="en")
 						p.text-center
 							span 5
 						h3.text-center póliza
-	hr
-	h1 registro
+		hr
+		h1 registro
+		h2.subtitulo ingreso de datos
+		.bggris
+			.container
+				form
+					.row
+						.col-md-12
+							p Para conocer la opción de Hogar que tenemos para ti, por favor completa los siguientes campos:
+							h4 Datos personales
+					
+						.col-md-4
+							input#nombre.form-control(type='text', placeholder='Nombre')
+						.col-md-4
+							input#nombre.form-control(type='text', placeholder='Correo electrónico')					
+					.row
+						.col-md-12
+							h4 Domicilio
 
-	hr
-	h1 cotiza
+					.row
+						.col-md-4
+							input#nombre.form-control(type='text', placeholder='Calle')
+						.col-md-2
+							input#nombre.form-control(type='text', placeholder='No.Ext')
+						.col-md-2
+							input#nombre.form-control(type='text', placeholder='No.Int')
+						.col-md-4
+							input#nombre.form-control(type='text', placeholder='C.P.*')
+					.row
+						.col-md-4
+							input#nombre.form-control(type='text', placeholder='Colonia')
+						.col-md-4
+							input#nombre.form-control(type='text', placeholder='Delegación/Municipio')
+						.col-md-4
+							input#nombre.form-control(type='text', placeholder='Ciudad')
+					.row
+						.col-md-4
+							input#nombre.form-control(type='text', placeholder='Estado')
+					.row
+						h4 Suma asegurada
+						.col-md-4
 
-	hr
-	h1 cuestionario
 
-	hr
-	h1 contrata
 
-	hr
-	h1 poliza
+		hr
+		h1 cotiza
 
-	hr
+		hr
+		h1 cuestionario
+
+		hr
+		h1 contrata
+
+		hr
+		h1 poliza
+
+		hr
 
 	script(src="http://code.jquery.com/jquery.js")
 	script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js")
