--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -81,6 +81,83 @@ html(lang="en")
 
 		hr
 		h1 cotiza
+		h2.subtitulo COTIZACIÓN
+		.bggris
+			.container
+				form
+					.row
+						.col-md-12
+							p
+								strong Hola XXXXXX
+								, ésta es la mejor opción que encontramos para tí:
+					.row
+						.col-md-4
+							.col-md-10
+								.bqplanes.text-center
+									h3 Plan A
+									h3.text-left Cobertura
+									ul
+										li -.-.-.-.
+										li -.-.-.-.
+										li -.-.-.-.
+								.radio.text-center
+									label
+										input(type='radio',name='terremoto',value='option1')
+										|	Con terremoto
+								.radio.text-center
+									label
+										input(type='radio',name='terremoto',value='option2')
+										|	Sin terremoto
+
+						.col-md-4
+							.col-md-10
+								.bqplanes.text-center
+									h3 Plan B
+									h3.text-left Cobertura
+									ul
+										li -.-.-.-.
+										li -.-.-.-.
+										li -.-.-.-.
+								.radio.text-center
+									label
+										input(type='radio',name='terremoto',value='option1')
+										|	Con terremoto
+								.radio.text-center
+									label
+										input(type='radio',name='terremoto',value='option2')
+										|	Sin terremoto
+								
+						.col-md-4
+							.col-md-10
+								.bqplanes.text-center
+									h3 Plan PLUS
+									h3.text-left Cobertura
+									ul
+										li -.-.-.-.
+										li -.-.-.-.
+										li -.-.-.-.
+								.radio.text-center
+									label
+										input(type='radio',name='terremoto',value='option1')
+										|	Con terremoto
+								.radio.text-center
+									label
+										input(type='radio',name='terremoto',value='option2')
+										|	Sin terremoto
+
+					.row
+						.col-md-12
+							.col-md-3.text-right
+								h4 Pagos por prima:
+								h6 Elige el plan que más te interesa
+							.col-md-9
+							
+					.row
+						.col-md-4
+							input#nombre.form-control(type='text', placeholder='Estado')
+					.row
+						h4 Suma asegurada
+						.col-md-4
 
 		hr
 		h1 cuestionario
