--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -36,3 +36,12 @@ $stepactiveh3:red;
 .form-control{
 	margin-bottom: 21px;
 }
+.bqplanes{
+	background: #ddd;
+	padding-bottom: 40px;
+	ul{
+		li{
+			padding-bottom: 10px;
+		}
+	}
+}
