--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -94,7 +94,9 @@ html(lang="en")
 
 		hr
 		h1 cotiza
-		h2.subtitulo COTIZACIÓN
+		.container
+			.row
+				h2.subtitulo COTIZACIÓN
 		.bggris
 			.container
 				form
@@ -106,73 +108,69 @@ html(lang="en")
 					.row
 						.col-md-4
 							.col-md-10
-								.bqplanes.text-center
-									h3 Plan A
-									h3.text-left Cobertura
+								.bqplanes
+									.radio.text-center
+									label
+										input(type='radio',name='planes',value='option1',checked='true')
+									h3.text-center Plan A
 									ul
+										h3.text-left Cobertura
 										li -.-.-.-.
 										li -.-.-.-.
 										li -.-.-.-.
-								.radio.text-center
-									label
-										input(type='radio',name='terremoto',value='option1')
-										|	Con terremoto
-								.radio.text-center
-									label
-										input(type='radio',name='terremoto',value='option2')
-										|	Sin terremoto
-
 						.col-md-4
 							.col-md-10
-								.bqplanes.text-center
-									h3 Plan B
-									h3.text-left Cobertura
+								.bqplanes
+									.radio.text-center
+									label
+										input(type='radio',name='planes',value='option2')
+									h3.text-center Plan B
 									ul
+										h3.text-left Cobertura
 										li -.-.-.-.
 										li -.-.-.-.
 										li -.-.-.-.
 								.radio.text-center
 									label
-										input(type='radio',name='terremoto',value='option1')
+										input(type='radio',name='terremoto',value='option3',checked='true')
 										|	Con terremoto
 								.radio.text-center
 									label
 										input(type='radio',name='terremoto',value='option2')
 										|	Sin terremoto
-								
 						.col-md-4
 							.col-md-10
-								.bqplanes.text-center
-									h3 Plan PLUS
-									h3.text-left Cobertura
+								.bqplanes
+									.radio.text-center
+									label
+										input(type='radio',name='planes',value='option1')
+									h3.text-center Plan PLUS
 									ul
+										h3.text-left Cobertura
 										li -.-.-.-.
 										li -.-.-.-.
 										li -.-.-.-.
-								.radio.text-center
-									label
-										input(type='radio',name='terremoto',value='option1')
-										|	Con terremoto
-								.radio.text-center
-									label
-										input(type='radio',name='terremoto',value='option2')
-										|	Sin terremoto
-
 					.row
 						.col-md-12
 							.col-md-3.text-right
 								h4 Pagos por prima:
-								h6 Elige el plan que más te interesa
+								h6 Elige el plan que más te 
+									br 
+									h6 interesa
 							.col-md-9
-								
-							
+								.col-md-3
+									button.btn.btn-info(type='button') $ 0.00 Mensual
+								.col-md-3
+									button.btn.btn-info(type='button') $ 0.00 quincenal
+								.col-md-3
+									button.btn.btn-info(type='button') $ 0.00 Semestral
+								.col-md-3
+									button.btn.btn-info(type='button') $ 0.00 Anual		
 					.row
-						.col-md-4
-							input#nombre.form-control(type='text', placeholder='Estado')
-					.row
-						h4 Suma asegurada
-						.col-md-4
-
+						.col-md-6.text-right
+							button NO ME INTERESA
+						.col-md-6.text-left
+							button CONTINUAR
 		hr
 		h1 cuestionario
 
