--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -33,6 +33,13 @@ $stepactiveh3:red;
 		}
 	}
 }
+.bggris{
+	background: #eee;
+	border:solid 1px #ddd;
+	padding-bottom: 20px;
+	padding-top: 20px;
+
+}
 .form-control{
 	margin-bottom: 21px;
 }
