--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -100,84 +100,83 @@ html(lang="en")
 		.container
 			.row
 				h2.subtitulo COTIZACIÓN
-		.bggris
-			.container
-				form
-					.row
-						.col-md-12
-							p
-								strong Hola XXXXXX
-								, ésta es la mejor opción que encontramos para tí:
-					.row
-						.col-md-4
-							.col-md-10
-								.bqplanes
-									.radio.text-center
-									label
-										input(type='radio',name='planes',value='option1',checked='true')
-									h3.text-center Plan A
-									ul
-										h3.text-left Cobertura
-										li -.-.-.-.
-										li -.-.-.-.
-										li -.-.-.-.
-						.col-md-4
-							.col-md-10
-								.bqplanes
-									.radio.text-center
-									label
-										input(type='radio',name='planes',value='option2')
-									h3.text-center Plan B
-									ul
-										h3.text-left Cobertura
-										li -.-.-.-.
-										li -.-.-.-.
-										li -.-.-.-.
+		.container.bggris
+			form
+				.row
+					.col-md-12
+						p
+							strong Hola XXXXXX
+							, ésta es la mejor opción que encontramos para tí:
+				.row
+					.col-md-4
+						.col-md-10
+							.bqplanes
 								.radio.text-center
-									label
-										input(type='radio',name='terremoto',value='option3',checked='true')
-										|	Con terremoto
+								label
+									input(type='radio',name='planes',value='option1',checked='true')
+								h3.text-center Plan A
+								ul
+									h3.text-left Cobertura
+									li -.-.-.-.
+									li -.-.-.-.
+									li -.-.-.-.
+					.col-md-4
+						.col-md-10
+							.bqplanes
 								.radio.text-center
-									label
-										input(type='radio',name='terremoto',value='option2')
-										|	Sin terremoto
-						.col-md-4
-							.col-md-10
-								.bqplanes
-									.radio.text-center
-									label
-										input(type='radio',name='planes',value='option1')
-									h3.text-center Plan PLUS
-									ul
-										h3.text-left Cobertura
-										li -.-.-.-.
-										li -.-.-.-.
-										li -.-.-.-.
-					.row
-						.col-md-12
-							.col-md-3.text-right
-								h4 Pagos por prima:
-								h6 Elige el plan que más te 
-									br 
-									h6 interesa
-							.col-md-9
-								.col-md-3
-									br
-									button.btn.btn-info(type='button') $ 0.00 Mensual
-								.col-md-3
-									br
-									button.btn.btn-info(type='button') $ 0.00 quincenal
-								.col-md-3
-									br
-									button.btn.btn-info(type='button') $ 0.00 Semestral
-								.col-md-3
-									br
-									button.btn.btn-info(type='button') $ 0.00 Anual		
-					.row
-						.col-md-6.text-right
-							button.btn-lg NO ME INTERESA
-						.col-md-6.text-left
-							button.btn-lg(type='button', data-toggle='modal', data-target='#myModal') CONTINUAR
+								label
+									input(type='radio',name='planes',value='option2')
+								h3.text-center Plan B
+								ul
+									h3.text-left Cobertura
+									li -.-.-.-.
+									li -.-.-.-.
+									li -.-.-.-.
+							.radio.text-center
+								label
+									input(type='radio',name='terremoto',value='option3',checked='true')
+									|	Con terremoto
+							.radio.text-center
+								label
+									input(type='radio',name='terremoto',value='option2')
+									|	Sin terremoto
+					.col-md-4
+						.col-md-10
+							.bqplanes
+								.radio.text-center
+								label
+									input(type='radio',name='planes',value='option1')
+								h3.text-center Plan PLUS
+								ul
+									h3.text-left Cobertura
+									li -.-.-.-.
+									li -.-.-.-.
+									li -.-.-.-.
+				.row
+					.col-md-12
+						.col-md-3.text-right
+							h4 Pagos por prima:
+							h6 Elige el plan que más te 
+								br 
+								h6 interesa
+						.col-md-9
+							.col-md-3
+								br
+								button.btn.btn-info(type='button') $ 0.00 Mensual
+							.col-md-3
+								br
+								button.btn.btn-info(type='button') $ 0.00 quincenal
+							.col-md-3
+								br
+								button.btn.btn-info(type='button') $ 0.00 Semestral
+							.col-md-3
+								br
+								button.btn.btn-info(type='button') $ 0.00 Anual		
+				.row
+					.col-md-6.text-right
+						button.btn-lg NO ME INTERESA
+					.col-md-6.text-left
+						button.btn-lg(type='button', data-toggle='modal', data-target='#myModal') CONTINUAR
 
 
 
@@ -214,70 +213,81 @@ html(lang="en")
 		.container
 			.row
 				h2 CUESTIONARIO
-		.bggris
-			.container
-				form
-					.row
-						.col-md-offset-8.col-md-2.text-center
-							strong NO
-						.col-md-2.text-center
-							strong SI
-					.row
-						.col-md-8
-							p ¿El inmueble por asegurar se encuentra auna distancia menor a 500 metros respecto a cualquier fuente de agua (lago, río, mar, etc.)?
+		.container.bggris
+			form
+				.row
+					.col-md-offset-8.col-md-2.text-center
+						strong NO
+					.col-md-2.text-center
+						strong SI
+				.row
+					.col-md-8
+						p ¿El inmueble por asegurar se encuentra auna distancia menor a 500 metros respecto a cualquier fuente de agua (lago, río, mar, etc.)?
+					.col-md-2
+						.radio.text-center
+							label
+								input(type='radio',name='cuestionarioP1',value='no',checked='true')
+					.col-md-2
+						.radio.text-center
+							label
+								input(type='radio',name='cuestionarioP1',value='si')
+				.row
+					.col-md-8
+						p ¿Los muros están construidos de tabique, ladrillo, block o concreto armado?
+					.col-md-2
+						.radio.text-center
+							label
+								input(type='radio',name='cuestionarioP2',value='no',checked='true')
+					.col-md-2
+						.radio.text-center
+							label
+								input(type='radio',name='cuestionarioP2',value='si')
+				.row
+					.col-md-8
+						p ¿Los techos están construidos de concreto armado o bóveda de ladrillo?
+					.col-md-2
+						.radio.text-center
+							label
+								input(type='radio',name='cuestionarioP3',value='no',checked='true')
+					.col-md-2
+						.radio.text-center
+							label
+								input(type='radio',name='cuestionarioP3',value='si')
+				.row
+					.form-inline
+						.col-md-12
+							p El domicilio a asegurar es:
+				.row
 						.col-md-2
-							.radio.text-center
+							.radio
 								label
-									input(type='radio',name='cuestionarioP1',value='no',checked='true')
-						.col-md-2
-							.radio.text-center
+									input(type='radio',name='cuestionarioP4',value='Casa',checked='true')
+									| Casa
+						.col-md-4
+							.radio
 								label
-									input(type='radio',name='cuestionarioP1',value='si')
-					.row
-						.col-md-8
-							p ¿Los muros están construidos de tabique, ladrillo, block o concreto armado?
-						.col-md-2
-							.radio.text-center
-								label
-									input(type='radio',name='cuestionarioP2',value='no',checked='true')
-						.col-md-2
-							.radio.text-center
-								label
-									input(type='radio',name='cuestionarioP2',value='si')
-					.row
-						.col-md-8
-							p ¿Los techos están construidos de concreto armado o bóveda de ladrillo?
-						.col-md-2
-							.radio.text-center
-								label
-									input(type='radio',name='cuestionarioP3',value='no',checked='true')
-						.col-md-2
-							.radio.text-center
-								label
-									input(type='radio',name='cuestionarioP3',value='si')
-					.row
-						.form-inline
-							.col-md-12
-								p El domicilio a asegurar es:
-					.row
-							.col-md-2
-								.radio
-									label
-										input(type='radio',name='cuestionarioP4',value='Casa',checked='true')
-										| Casa
-							.col-md-4
-								.radio
-									label
-										input(type='radio',name='cuestionarioP4',value='Dep')
-										| Departamento
-					.row
-						.col-md-6.text-right
-							button REGRESAR
-						.col-md-6.text-left
-							button CONTINUAR
+									input(type='radio',name='cuestionarioP4',value='Dep')
+									| Departamento
+				.row
+					.col-md-6.text-right
+						button REGRESAR
+					.col-md-6.text-left
+						button CONTINUAR
 		hr
 		h1 contrata
 
+		.container
+			.row
+				h2 PAGO DE CONTRATACIÓN
+		.container.bggris
+			form
+				.row
+					.col-md-8
+						STRONG RESUMEN DE CONTRATACIÓN
+					.col-md-2.text-right
+						p No. de cotización.
+					.col-md-2.bqblanco
+						h6 123456789A
 		hr
 		h1 poliza
 
