--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -275,7 +275,6 @@ html(lang="en")
 						button CONTINUAR
 		hr
 		h1 contrata
-
 		.container
 			.row
 				h2 PAGO DE CONTRATACIÓN
@@ -386,7 +385,28 @@ html(lang="en")
 
 		hr
 		h1 poliza
-
+		.container.bggris
+			.row
+				.col-md-12.text-center
+					//- img(src="", alt="")
+					h2 ¡FELICIDADES!
+					.space
+					h3 Tu compra se ha realizado sin problemas y tu PÓLIZA se ha generado correctamente.
+					.space
+					h2 PÓLIZA NO. 24689012
+					.space
+			.space
+			.row
+				.col-md-6.text-right
+					button ENVIAR POR MAIL
+				.col-md-6.text-left
+					button DESCARGAR PDF
+			.space
+			.space
+			.space
+			.row
+				.col-md-12.text-center
+					button SALIR
 		hr
 
 	script(src="http://code.jquery.com/jquery.js")
