--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -277,7 +277,106 @@ html(lang="en")
 							button CONTINUAR
 		hr
 		h1 contrata
-
+		.container.bggris
+			h2.subtitulo contrata
+			.row
+				.col-md-12
+					h4 datos personales
+				form
+					.row
+						.col-md-8
+							.col-md-6
+								.form-group
+									label Apellido Paterno
+									input.form-control(type="text",placeholder="Email")
+								.form-group
+									label Nombre(s)
+									input.form-control(type="text",placeholder="Nombre(s)")
+								.form-group
+									label CURP*
+									input.form-control(type="text",placeholder="CURP")
+								.form-group
+									label Correo electronico
+									input.form-control(type="text",placeholder="Correo electronico")
+							.col-md-6
+								.form-group
+									label Apellido Materno
+									input.form-control(type="text",placeholder="Apellido Materno")
+								.radio
+									label
+										input#optionsRadios1(type='radio', name='optionsRadios', value='option1', checked='')
+										|Femenino
+								.radio
+									label
+										input#optionsRadios2(type='radio', name='optionsRadios', value='option2')
+										|     Masculino
+								.form-group
+									label R.F.C*
+									input.form-control(type="text",placeholder="RFC")
+						.col-md-4
+							.col-md-12
+								p no. de Poliza
+								p 123456789A
+							p.text-center Mi cotización
+							p.text-center Plan B
+							p.text-center Cobertura
+							ul
+								li -------
+								li -------
+								li -------
+							.col-xs-6 
+								p Pago por prima
+							.col-xs-6
+								p $0000
+								p mensual
+					.row
+						.col-md-12
+							
+							h4 domicilio
+							.col-md-6
+								.form-group
+									label Calle
+									input.form-control(type="text",placeholder="Calle")
+							.col-md-3
+								.form-group
+									label No. Exterior
+									input.form-control(type="text",placeholder="Apellido Materno")									
+							.col-md-3
+								.form-group
+									label no. Int
+									input.form-control(type="text",placeholder="No. Int")
+							.col-md-6
+								.form-group
+									label C.P*
+									input.form-control(type="text",placeholder="Codigo postal")
+							.col-md-6
+								label Colonia
+								select.form-control
+									option(value="opcion-1") Colonia
+									option(value="opcion-2") b
+									option(value="opcion-3") c
+									option(value="opcion-4") d
+									option(value="opcion-5") e
+							.col-md-6
+								.form-group
+									label Delegación/municipio
+									input.form-control(type="text",placeholder="Delegación/municipio")
+							.col-md-6
+								.form-group
+									label Ciudad
+									input.form-control(type="text",placeholder="Ciudad")
+							.col-md-6
+								.form-group
+									label Estado
+									input.form-control(type="text",placeholder="Estado")
+							.col-md-6
+								.form-group
+									label Ciudad
+									input.form-control(type="text",placeholder="Ciudad")
+							.col-md-6
+								.form-group
+									label Teléfono
+									input.form-control(type="text",placeholder="Teléfono")
 		hr
 		h1 poliza
 
