--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -312,6 +312,54 @@ html(lang="en")
 								.form-group
 									label R.F.C*
 									input.form-control(type="text",placeholder="RFC")
+							.row
+								.col-md-12
+									
+									h4 domicilio
+									.col-md-6
+										.form-group
+											label Calle
+											input.form-control(type="text",placeholder="Calle")
+									.col-md-3
+										.form-group
+											label No. Exterior
+											input.form-control(type="text",placeholder="Apellido Materno")									
+									.col-md-3
+										.form-group
+											label no. Int
+											input.form-control(type="text",placeholder="No. Int")
+									.col-md-6
+										.form-group
+											label C.P*
+											input.form-control(type="text",placeholder="Codigo postal")
+									.col-md-6
+										label Colonia
+										select.form-control
+											option(value="opcion-1") Colonia
+											option(value="opcion-2") b
+											option(value="opcion-3") c
+											option(value="opcion-4") d
+											option(value="opcion-5") e
+									.col-md-6
+										.form-group
+											label Delegación/municipio
+											input.form-control(type="text",placeholder="Delegación/municipio")
+									.col-md-6
+										.form-group
+											label Ciudad
+											input.form-control(type="text",placeholder="Ciudad")
+									.col-md-6
+										.form-group
+											label Estado
+											input.form-control(type="text",placeholder="Estado")
+									.col-md-6
+										.form-group
+											label Teléfono fijo
+											input.form-control(type="text",placeholder="Teléfono fijo")
+									.col-md-6
+										.form-group
+											label Teléfono movil
+											input.form-control(type="text",placeholder="Teléfono movil")										
 						.col-md-4
 							.col-md-12
 								p no. de Poliza
@@ -328,54 +376,7 @@ html(lang="en")
 							.col-xs-6
 								p $0000
 								p mensual
-					.row
-						.col-md-12
-							
-							h4 domicilio
-							.col-md-6
-								.form-group
-									label Calle
-									input.form-control(type="text",placeholder="Calle")
-							.col-md-3
-								.form-group
-									label No. Exterior
-									input.form-control(type="text",placeholder="Apellido Materno")									
-							.col-md-3
-								.form-group
-									label no. Int
-									input.form-control(type="text",placeholder="No. Int")
-							.col-md-6
-								.form-group
-									label C.P*
-									input.form-control(type="text",placeholder="Codigo postal")
-							.col-md-6
-								label Colonia
-								select.form-control
-									option(value="opcion-1") Colonia
-									option(value="opcion-2") b
-									option(value="opcion-3") c
-									option(value="opcion-4") d
-									option(value="opcion-5") e
-							.col-md-6
-								.form-group
-									label Delegación/municipio
-									input.form-control(type="text",placeholder="Delegación/municipio")
-							.col-md-6
-								.form-group
-									label Ciudad
-									input.form-control(type="text",placeholder="Ciudad")
-							.col-md-6
-								.form-group
-									label Estado
-									input.form-control(type="text",placeholder="Estado")
-							.col-md-6
-								.form-group
-									label Ciudad
-									input.form-control(type="text",placeholder="Ciudad")
-							.col-md-6
-								.form-group
-									label Teléfono
-									input.form-control(type="text",placeholder="Teléfono")
+
 
 		.container
 			.row
