--- a/vida/jade/index.jade
+++ b/vida/jade/index.jade
@@ -8,6 +8,7 @@ html(lang="en")
 		meta(name="author",content="")
 		title Cotizador de...
 		link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
+		link(rel='stylesheet', href='https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
 		link(rel="stylesheet",href="style.css")
 	body
 		hr
@@ -50,27 +51,15 @@ html(lang="en")
 				.row
 					.col-md-offset-3.col-md-5
 						p Fecha de nacimiento*
-						.col-md-4
-							select.form-control
-								option(value="opcion-1") Día
-								option(value="opcion-2") b
-								option(value="opcion-3") c
-								option(value="opcion-4") d
-								option(value="opcion-5") e
-						.col-md-4
-							select.form-control
-								option(value="opcion-1") Mes
-								option(value="opcion-2") b
-								option(value="opcion-3") c
-								option(value="opcion-4") d
-								option(value="opcion-5") e
-						.col-md-4
-							select.form-control
-								option(value="opcion-1") Año
-								option(value="opcion-2") b
-								option(value="opcion-3") c
-								option(value="opcion-4") d
-								option(value="opcion-5") e
+						.col-xs-12
+							input.selector.form-control(type='text')
+						.col-xs-4
+							input#day.form-control(type='text', disabled='')
+						.col-xs-4
+							input#moth.form-control(type='text', disabled='')
+						.col-xs-4
+							input#year.form-control(type='text', disabled='')
+
 				.row
 					.col-md-offset-3.col-md-5
 						input#nombre.form-control(type='text', placeholder='Correo electrónico*')					
@@ -558,4 +547,6 @@ html(lang="en")
 		hr
 
 	script(src="http://code.jquery.com/jquery.js")
+	script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
+	script(src="../js/app.js")
 	script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js")
