--- a/vida/jade/index.jade
+++ b/vida/jade/index.jade
@@ -286,8 +286,15 @@ html(lang="en")
 							.space
 						.col-md-8
 							.form-group
-								p.label Fecha de nacimiento*
-								input.form-control(type="text",placeholder="RFC")
+								p Fecha de nacimiento*
+								.col-xs-12
+									input.selector.form-control(type='text')
+								.col-xs-4
+									input#day.form-control(type='text', disabled='')
+								.col-xs-4
+									input#moth.form-control(type='text', disabled='')
+								.col-xs-4
+									input#year.form-control(type='text', disabled='')
 						.col-md-6
 							.form-group
 								p.label Pais de nacimiento*
@@ -503,85 +510,191 @@ html(lang="en")
 
 		.container
 			.row
-				h2 PAGO DE CONTRATACIÓN
+				h2 PÓLIZA
 		.container.bggris
 			.row
 				.col-md-8
-					STRONG RESUMEN DE CONTRATACIÓN
-				.col-md-2.text-right
-					p No. de cotización.
-				.col-md-2.bqblanco
-					h6 123456789A
+					p
+						strong XXXXXX
+						, éstos son los datos que vas a registrar para contratar tu seguro y emitir tu Póliza, por favor revisa la información.
+				.col-md-3.text-right
+					p.label No. de cotización
+					br
+					p.label 123456789A
+			.row
+				.col-md-4
+					h4 SUMA ASEGURADA:
+				.col-md-3
+					h4 $0,000
+				.col-md-3
+					h4 	
+				.col-md-2
+					h4 
+			.row
+				.col-md-4
+					p Suma asegurada:
+				.col-md-3
+					p $0,000
+				.col-md-3
+					p 
+				.col-md-2
+					p 
+			.row
+				.col-md-4
+					p suma asegurada por fallecimiento:
+				.col-md-3
+					p $0,000
+				.col-md-3 	
+					p Suma asegurada por muerte accidental:
+				.col-md-2
+					p $0,000
+			.row
+				.col-md-4
+					p Suma asegurada para gastos funerarios:
+				.col-md-3
+					p $0,000
+				.col-md-3 
+					p Plan creciente:
+				.col-md-2
+					p Si
+			.row
+				.col-md-4
+					p Prima:
+				.col-md-3
+					p $0,00- Mensual
+				.col-md-3
+					p 
+				.col-md-2
+					p 	
+			.space					
 			.row
 				.col-md-12
 					h4 DATOS PERSONALES
 			.row
-				.col-md-3
-					p.label Nombre del cliente
-					p.dato XRamiréz Ayala Juan LuisX
 				.col-md-4
-					p.label Correo eléctronico
-					p.dato Xjuan@mail.comX
-				.col-md-3
-					p.label CURP
-					p.dato XRAYU123412MMDH09X
-				.col-md-2
-					p.label RFC
-					p.dato XRAYU123412MMX
+					.col-md-6
+						p Nombre(s):
+						p Fecha de nacimiento:
+						p Entidad de nacimiento:
+					.col-md-6
+						p Jorge
+						p 11.12.1980
+						p CDMX
+				.col-md-4
+					.col-md-5
+						p Primer apellido: 
+						p Género:
+						p CURP
+					.col-md-7
+						p Huerta
+						p Masculino
+						p AAAA123123123AWEWD!
+				.col-md-4
+					.col-md-6
+						p Segundo apellido:
+						p País de nacimiento:
+					.col-md-6
+						p Sainz
+						p México
+			.space
 			.row
 				.col-md-12
 					h4 DOMICILIO
-					P.dato Exploradores Tonatiuh No. 304, Col. Alamos, C.p. 034500, Bénito Juárez, CDMX.
-					br
-					p
-						hr
 			.row
 				.col-md-12
-					h4 DATOS DEL SEGURO DE HOGAR
+					p El domicilio registrado será usado para entregas postales.
 			.row
-				.col-md-4.text-center
-					h2 Plan B
 				.col-md-4
-					h4 Cobertura
-					ul
-						li -.-.-.-
-						li -.-.--.-
-						li -.-.-.-.
-				.col-md-4.text-center
+					.col-md-6
+						p C.P
+						p Delegación o municipio:
+						p No. Exterior:
+					.col-md-6
+						p 11320
+						p Miguél Hidalgo
+						p 319
+				.col-md-4
+					.col-md-6
+						p Entidad federativa:
+						p Colonia:
+						p No. Interior:
+					.col-md-6
+						p CDMX
+						p Anáhuac
+						p 405-B
+				.col-md-4
+					.col-md-6
+						p Ciudad
+						p Calle
+						p Núm. teléfonico
+					.col-md-6
+						p México
+						p Mariano Escobedo
+						p 55000023
+			.space
+			.row
+				.col-md-12
+					h4 Beneficiarios
+				.col-md-4
+					.col-md-12
+						p.label Beneficiario 1
+					.col-md-6
+						p Nombre(s):
+						p Primer apellido:
+						p Segundo apellido:
+						p Parentezco:
+						p Porcentaje
+					.col-md-6
+						p María Eugenia
+						p Sainz
+						p Díaz
+						p Madre
+						p 70%
+				.col-md-4
+					.col-md-12
+						p.label Beneficiario 2
+					.col-md-6
+						p Nombre(s):
+						p Primer apellido:
+						p Segundo apellido:
+						p Parentezco:
+						p Porcentaje
+					.col-md-6
+						p María Eugenia
+						p Sainz
+						p Díaz
+						p Madre
+						p 70%
+				.col-md-4
 					h3 Pago por prima
 					h2 $250.00
 					h3 mensual
-		.container
-			.space
+		.container.bqplanes
 			form
 				.row
 					.col-md-12
 						h4 COMPRAR
 						p Para realizar tu compra y descargar tu póliza, es necesario que ingreses los siguientes datos.
 				.row
-					.col-md-6
+					.col-md-4
 						.col-md-10
-							p.label Nombre del titular
-							input#contrata.form-control(type='text' placeholder='Escribe tu nombre')
-					.col-md-6
+							p.label No. de tarjeta*
+							input#contrata.form-control(type='text' placeholder='12312341234234123')
+					.col-md-4
+						.col-md-10
+							p.label CVV*
+							input#contrata.form-control(type='text' placeholder='000')
+					.col-md-4
 						.col-md-10
 							p.label Tipo de tarjeta*
 							select.form-control
 								option(value="opcion-1") VISA
 								option(value="opcion-2") b
 								option(value="opcion-3") c
-								option(value="opcion-4") d	
+								option(value="opcion-4") d		
 				.row
-					.col-md-6
-						.col-md-10
-							p.label No. de tarjeta*
-							input#contrata.form-control(type='text' placeholder='12312341234234123')
-					.col-md-6
-						.col-md-10
-							p.label CVV*
-							input#contrata.form-control(type='text' placeholder='000')
-				.row
-					.col-md-6
+					.col-md-4
+						.space
 						.col-md-12
 							p.label Fecha de vencimiento*
 						.col-md-4
@@ -596,19 +709,54 @@ html(lang="en")
 								option(value="opcion-2") b
 								option(value="opcion-3") c
 								option(value="opcion-4") d
-				.row
-					.col-md-6
-						.checkbox
+					.col-md-4
+					.col-md-4.text-center
+						h4 Meses sin intereses:
+						.radio.text-center
 							label
-								input(type='checkbox')
-								p Acepto	
-									a(target="_BLANK",href="#") Términos y condiciones
+								input(type='radio',name='MeseSinIntereses',value='3meses')
+								| 3 Meses
+						.radio.text-center
+							label
+								input(type='radio',name='MeseSinIntereses',value='6meses')
+								| 6 Meses
+						.radio.text-center
+							label
+								input(type='radio',name='MeseSinIntereses',value='9meses')
+								| 9 Meses
+						.radio.text-center
+							label
+								input(type='radio',name='MeseSinIntereses',value='12meses')
+								| 12 Meses
+				.space
 				.row
-					.col-md-6.text-right
-						button REGRESAR
-					.col-md-6.text-left
-						button PAGAR
+					.col-md-4.text-center
+						button SEGUIR DESPUES
+					.col-md-4.text-center
+						button NO ME INTERESA
+					.col-md-4.text-center
+						button(type='button', data-toggle='modal', data-target='#myModal3') PAGAR
+		// Modal
+		#myModal3.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
+			.modal-dialog(role='document')
+				.modal-content
+					//.modal-header
+						button.close(type='button', data-dismiss='modal', aria-label='Close')
+							span(aria-hidden='true') ×
+						h4#myModalLabel.modal-title Modal title
+					.modal-body.text-center
+						h4
+							strong
+								¡Parece que tenemos un problema!
+						p No pudimos realizar el cobro, porfavor verifica los datos de tu tarjeta o consulta el saldo disponible.
 
+						button.btn-lg revisar
+
+
+
+					//.modal-footer
+						button.btn.btn-default(type='button', data-dismiss='modal') Close
+						button.btn.btn-primary(type='button') Save changes
 
 		hr
 		h1 poliza
@@ -616,7 +764,7 @@ html(lang="en")
 			.row
 				.col-md-12.text-center
 					//- img(src="", alt="")
-					h2 ¡FELICIDADES!
+					h2 ¡Ya estas protegido!
 					.space
 					h3 Tu compra se ha realizado sin problemas y tu PÓLIZA se ha generado correctamente.
 					.space
@@ -631,10 +779,10 @@ html(lang="en")
 			.space
 			.space
 			.space
-			.row
-				.col-md-12.text-center
-					button SALIR
 		hr
+
+		
+
 
 	script(src="http://code.jquery.com/jquery.js")
 	script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
